--- a/nasa.css
+++ b/nasa.css
@@ -60,16 +60,20 @@ input {
 img{
     color: white;
 }
+.ab{
+    padding: 10px 0 0 20px;
+}
 
 .mission {
     color: white;
     background-color: red;
     text-decoration: none;
     border: 1px;
-    padding: 5px 30px ;
-    right: 10px;
+    padding: 15px;
+    border-radius: 10px;
 
 }
+
 
 .line {
     display: flex;
@@ -80,11 +84,12 @@ img{
 .par {
     display: flex;
     gap: 150px;
-    padding: 10px 30px 0;
+    padding: 15px 30px 0;
+    font-family: 'Times New Roman', Times, serif;
 }
 
 .main {
-    height: 90vh;
+    height: 86vh;
     width: 100%;
     top: 30%;
     color: black;
@@ -95,9 +100,11 @@ img{
 
 .main h1 {
     padding: 120px 30px 0;
-    font-family:Arial, Helvetica, sans-serif;
+    font-style: oblique;
+    font-family:'Courier New', Courier, monospace;
 }
 
 .explain {
-    padding: 10px 30px 0;
+    padding: 40px 30px 0;
+    font-style: italic;
 }
