--- a/nasa.css
+++ b/nasa.css
@@ -78,7 +78,7 @@ img{
 .line {
     display: flex;
     gap: 30px;
-    padding: 100px 30px 0;
+    padding: 70px 30px 0;
 }
 
 .par {
@@ -93,15 +93,16 @@ img{
     width: 100%;
     top: 30%;
     color: black;
-    /*background-image: url(./space.png);*/
+    background-image: url(./image/star-field-space-nebulae-gas-congestion_941265-18868.avif );
     color: white;
-    background-image: linear-gradient(to right, black , red , black);
+    /*background-image: linear-gradient(to right, black , red , black);*/
 }
 
-.main h1 {
+.hd {
     padding: 120px 30px 0;
     font-style: oblique;
     font-family:'Courier New', Courier, monospace;
+    font-size: 60px;
 }
 
 .explain {
